basic crawling now works with birding.hu

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "expo-screen-orientation": "~5.1.1"
+    "expo-screen-orientation": "~5.1.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
+    "@types/react": "~18.0.15",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
