observation component created image and map view still not working properly
Took 1 hour 48 minutes

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-screen-orientation": "~5.1.1",
     "react-native-dropdown-picker": "^5.4.6",
     "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "react-native-maps": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
