--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "birding-alert",
-  "version": "1.0.0",
+  "name": "glareola",
+  "version": "0.0.1",
+  "description": "Web crawler to get the latest bird observations for Hungary",
   "main": "node_modules/expo/AppEntry.js",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,11 +11,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
-    "expo-screen-orientation": "~5.1.1",
+    "expo": "^49.0.3",
+    "expo-status-bar": "^1.6.0",
+    "react": "^18.2.0",
+    "react-native": "^0.72.3",
+    "expo-screen-orientation": "^6.0.3",
     "react-native-dropdown-picker": "^5.4.6",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
@@ -21,8 +23,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.15",
-    "typescript": "^4.9.5"
+    "@types/react": "^18.2.15",
+    "typescript": "^5.1.6"
   },
   "private": true
 }
