settings component created preparation of db storage statusbar fix assets folder refactored
Took 29 minutes

--- a/app.json
+++ b/app.json
@@ -3,10 +3,10 @@
     "name": "birding-alert",
     "slug": "birding-alert",
     "version": "1.0.0",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
