--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^49.0.6",
-    "expo-status-bar": "^1.6.0",
-    "react": "^18.2.0",
-    "react-native": "^0.72.3",
-    "expo-screen-orientation": "^6.0.5",
-    "react-native-dropdown-picker": "^5.4.6",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "expo": "^49.0.6",
+    "expo-asset": "~8.10.1",
+    "expo-screen-orientation": "^6.0.5",
+    "expo-status-bar": "^1.6.0",
+    "expo-sqlite": "^11.3.2",
+    "react": "^18.2.0",
+    "react-native": "^0.72.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "^1.7.1",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@types/react": "^18.2.17",
+    "@types/react": "^18.2.18",
     "typescript": "^5.1.6"
   },
   "private": true
