--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "axios": "^1.5.0",
     "cheerio": "^1.0.0-rc.12",
-    "expo": "^49.0.10",
-    "expo-asset": "~8.12.0",
-    "expo-screen-orientation": "^6.2.0",
-    "expo-sqlite": "^11.6.0",
-    "expo-status-bar": "^1.7.1",
+    "expo": "^49.0.11",
+    "expo-asset": "^8.10.1",
+    "expo-screen-orientation": "^6.0.5",
+    "expo-sqlite": "^11.3.3",
+    "expo-status-bar": "^1.6.0",
     "react": "^18.2.0",
     "react-native": "^0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
@@ -28,7 +28,8 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.17",
+    "@babel/core": "^7.22.19",
+    "babel-preset-expo": "^9.5.2",
     "@types/react": "^18.2.21",
     "typescript": "^5.2.2"
   },
