--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glareola",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Web crawler to get the latest bird observations for Hungary",
   "main": "node_modules/expo/AppEntry.js",
   "license": "MIT",
@@ -22,15 +22,12 @@
     "react-native": "^0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "^1.7.1",
-    "react-native-sqlite-storage": "^6.0.1",
-    "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.6",
-    "typeorm": "^0.3.17"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
-    "babel-preset-expo": "^9.5.2",
     "@types/react": "^18.2.21",
+    "babel-preset-expo": "^9.5.2",
     "typescript": "^5.2.2"
   },
   "private": true
