--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -22,7 +21,10 @@
     "react-native": "^0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "^1.7.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "expo-splash-screen": "~0.20.5",
+    "expo-system-ui": "~2.4.0",
+    "expo-build-properties": "~0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
