--- a/app.json
+++ b/app.json
@@ -2,13 +2,13 @@
   "expo": {
     "name": "Glareola",
     "slug": "glareola",
-    "version": "0.0.2",
-    "icon": "./assets/images/icon.png",
+    "version": "0.0.3",
+    "icon": "./assets/images/glareola_portrait.png",
     "userInterfaceStyle": "dark",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/glareola_pratincola.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -18,13 +18,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/glareola_portrait.png",
         "backgroundColor": "#ffffff"
       },
       "package": "hu.delheves.glareola"
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/glareola_portrait.png"
     },
     "extra": {
       "eas": {
