--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glareola",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Web crawler to get the latest bird observations for Hungary",
   "main": "node_modules/expo/AppEntry.js",
   "license": "MIT",
@@ -14,17 +14,16 @@
     "cheerio": "^1.0.0-rc.12",
     "expo": "^49.0.11",
     "expo-asset": "~8.10.1",
+    "expo-build-properties": "~0.8.3",
     "expo-screen-orientation": "~6.0.5",
+    "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "react": "^18.2.0",
     "react-native": "^0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-maps": "^1.7.1",
-    "reflect-metadata": "^0.1.13",
-    "expo-splash-screen": "~0.20.5",
-    "expo-system-ui": "~2.4.0",
-    "expo-build-properties": "~0.8.3"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
