--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glareola",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Web crawler to get the latest bird observations for Hungary",
   "main": "node_modules/expo/AppEntry.js",
   "license": "MIT",
@@ -15,10 +15,12 @@
     "expo": "^49.0.11",
     "expo-asset": "~8.10.1",
     "expo-build-properties": "~0.8.3",
+    "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
+    "i18n-js": "4.2.0",
     "react": "^18.2.0",
     "react-native": "^0.72.4",
     "reflect-metadata": "^0.1.13"
