--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
   },
 
   "emitDecoratorMetadata": true,
-  "experimentalDecorators": true
+  "experimentalDecorators": true,
 }
