--- a/package.json
+++ b/package.json
@@ -4,14 +4,48 @@
   "description": "Web crawler to get the latest bird observations for Hungary",
   "main": "node_modules/expo/AppEntry.js",
   "license": "MIT",
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|i18n-js)"
+    ],
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/babel.config.js",
+      "!<rootDir>/.eslintrc.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 0,
+        "functions": 0,
+        "lines": 0,
+        "statements": 0
+      }
+    },
+    "coverageReporters": [
+      "text"
+    ]
+  },
   "scripts": {
     "start": "expo start",
+    "lint": "eslint ./src App.tsx",
+    "lint:fix": "eslint --fix",
+    "test": "jest",
+    "test:update": "jest -u",
+    "test:coverage": "jest --coverage=true",
+    "ts:check": "tsc",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.5.0",
     "cheerio": "^1.0.0-rc.12",
+    "eas-cli": "^5.3.0",
     "expo": "^49.0.11",
     "expo-asset": "~8.10.1",
     "expo-build-properties": "~0.8.3",
@@ -21,14 +55,22 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "i18n-js": "4.2.0",
+    "jest": "^29.2.1",
     "react": "^18.2.0",
     "react-native": "^0.72.4",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
+    "@babel/core": "^7.23.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@types/jest": "^29.5.5",
     "@types/react": "^18.2.21",
+    "@types/react-test-renderer": "^18.0.2",
     "babel-preset-expo": "^9.5.2",
+    "eslint": "^8.50.0",
+    "eslint-config-universe": "^12.0.0",
+    "husky": "^8.0.0",
+    "jest-expo": "^49.0.0",
     "typescript": "^5.2.2"
   },
   "private": true
