--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glareola",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Web crawler to get the latest bird observations for Hungary",
   "main": "node_modules/expo/AppEntry.js",
   "license": "MIT",
@@ -16,14 +16,17 @@
       "**/*.{ts,tsx}",
       "!<rootDir>/node_modules/",
       "!<rootDir>/babel.config.js",
-      "!<rootDir>/.eslintrc.js"
+      "!<rootDir>/.eslintrc.js",
+      "!<rootDir>/src/types/**",
+      "!<rootDir>/src/**/index.ts",
+      "!<rootDir>/src/utils/crawler/**"
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 0,
-        "functions": 0,
-        "lines": 0,
-        "statements": 0
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
       }
     },
     "coverageReporters": [
@@ -32,21 +35,21 @@
   },
   "scripts": {
     "start": "expo start",
-    "lint": "eslint ./src App.tsx",
+    "lint": "eslint ./src App.tsx App.test.tsx",
     "lint:fix": "eslint --fix",
     "test": "jest",
     "test:update": "jest -u",
     "test:coverage": "jest --coverage=true",
     "ts:check": "tsc",
+    "build": "eas build -p android --profile preview",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "prepare": "husky install"
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
-    "eas-cli": "^5.3.0",
-    "expo": "^49.0.11",
+    "expo": "^49.0.13",
     "expo-asset": "~8.10.1",
     "expo-build-properties": "~0.8.3",
     "expo-localization": "~14.3.0",
@@ -55,7 +58,7 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "i18n-js": "4.2.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-native": "^0.72.4",
     "reflect-metadata": "^0.1.13"
@@ -63,14 +66,16 @@
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.21",
     "@types/react-test-renderer": "^18.0.2",
     "babel-preset-expo": "^9.5.2",
     "eslint": "^8.50.0",
     "eslint-config-universe": "^12.0.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "jest-expo": "^49.0.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.2.2"
   },
   "private": true
