--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glareola",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Web crawler to get the latest bird observations for Hungary",
   "main": "node_modules/expo/AppEntry.js",
   "license": "MIT",
@@ -25,10 +25,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
       }
     },
     "coverageReporters": [
@@ -49,9 +49,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "axios": "^1.5.1",
-    "cheerio": "^1.0.0-rc.12",
-    "expo": "^49.0.13",
+    "axios": "~1.6.0",
+    "cheerio": "~1.0.0-rc.12",
+    "expo": "^49.0.16",
     "expo-asset": "~8.10.1",
     "expo-build-properties": "~0.8.3",
     "expo-localization": "~14.3.0",
@@ -62,18 +62,18 @@
     "i18n-js": "4.2.0",
     "jest": "^29.7.0",
     "react": "^18.2.0",
-    "react-native": "^0.72.4",
+    "react-native": "0.72.6",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
+    "@babel/core": "^7.23.2",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.3.0",
-    "@types/jest": "^29.5.5",
-    "@types/react": "^18.2.21",
-    "@types/react-test-renderer": "^18.0.2",
+    "@testing-library/react-native": "^12.3.2",
+    "@types/jest": "^29.5.7",
+    "@types/react": "^18.2.34",
+    "@types/react-test-renderer": "^18.0.5",
     "babel-preset-expo": "^9.5.2",
-    "eslint": "^8.50.0",
+    "eslint": "^8.52.0",
     "eslint-config-universe": "^12.0.0",
     "husky": "^8.0.3",
     "jest-expo": "^49.0.0",
